mvn clean install passes in both projects